# medicationsApp

./: docker-compose.yml  env  readme.md
backend/: Dockerfile  pyproject.toml  readme.md
backend/src/: main.py  router.py
backend/src/api/auth/: api.py  utils.py
backend/src/api/dependencies/: configuration.py  throttle.py  token.py
backend/src/api/drugs/: api.py  selectors.py
backend/src/api/drugs/schemas/: medication.py
backend/src/utils/: logger.py
backend/tests/: conftest.py
backend/tests/test_auth/: test_api.py  test_utils.py
backend/tests/test_drugs/: conftest.py  test_api.py  test_utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/DrugResults/: DrugResults.css  DrugResults.js
frontend/src/components/Header/: Header.css  Header.js
frontend/src/components/SearchForm/: DrugsFunctions.js  SearchForm.css  SearchForm.js
frontend/src/context/: Auth.js
frontend/src/pages/: Error.js
